--- a/RFID/RFID.vcxproj
+++ b/RFID/RFID.vcxproj
@@ -111,19 +111,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Assignment1\Assignment1\ass1.h" />
-    <ClInclude Include="..\DummyTerminal_v2_SourceCode\DummyTerm_Definitions.h" />
-    <ClInclude Include="..\DummyTerminal_v2_SourceCode\SerialCommApp.h" />
-    <ClInclude Include="..\DummyTerminal_v2_SourceCode\SerialCommPort.h" />
+    <ClInclude Include="DummyTerm_Definitions.h" />
+    <ClInclude Include="SerialCommApp.h" />
+    <ClInclude Include="SerialCommPort.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\Assignment1\Assignment1\menu.rc" />
-    <ResourceCompile Include="..\DummyTerminal_v2_SourceCode\dummytermmenu.rc" />
+    <ResourceCompile Include="dummytermmenu.rc" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Assignment1\Assignment1\Ass1.cpp" />
-    <ClCompile Include="..\DummyTerminal_v2_SourceCode\Main.cpp" />
-    <ClCompile Include="..\DummyTerminal_v2_SourceCode\SerialCommApp.cpp" />
-    <ClCompile Include="..\DummyTerminal_v2_SourceCode\SerialCommPort.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SerialCommApp.cpp" />
+    <ClCompile Include="SerialCommPort.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
